# realtime-recsys

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark.py  locustfile.py  results.json
configs/: prometheus.yml
deploy/: deploy_hf.py
deploy/hf_space/: Dockerfile  README.md
src/recsys/: __init__.py  config.py
src/recsys/data/: download.py  prepare.py  synthetic.py
src/recsys/eval/: ranking.py  recall.py
src/recsys/features/: materialize.py  store.py
src/recsys/index/: ann.py
src/recsys/models/: two_tower.py
src/recsys/monitor/: drift.py
src/recsys/serving/: app.py  artifacts.py  engine.py  schemas.py
src/recsys/serving/static/: index.html
src/recsys/train/: train_ranker.py  train_retrieval.py
tests/: conftest.py  test_ann.py  test_api.py  test_drift.py  test_engine.py  test_features.py  test_prepare.py  test_recall.py  test_two_tower.py
