[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-recsys"
version = "0.1.0"
description = "Two-stage retrieval-and-ranking recommender served under a sub-100ms latency budget"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "lightgbm>=4.3",
    "prometheus-client>=0.20",
    "redis>=5.0",
]

[project.optional-dependencies]
ann = ["faiss-cpu>=1.8"]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["recsys"]
